--- a/last2weeks/todo.txt
+++ b/last2weeks/todo.txt
@@ -7,7 +7,7 @@
 + fonts with all files!!!
 + font-smoothing
 + text antialysed
-- Par_numbr don't align when font size change!
+- /!\ Par_numbr don't align when font size change!
 - max font size for changing font size
 + bold on links/stylizing links
 + img size and caption
@@ -15,5 +15,6 @@
 + references and a     word-break: break-all;
 + #1C33E5
 - reference this
-- bugs on xs menu
+- /!\  bugs on xs menu functions
+- close menu when loading
 
