--- a/last2weeks/todo.txt
+++ b/last2weeks/todo.txt
@@ -23,5 +23,5 @@
 + columns for menu on xs
 + columns for menu on xs
 - right button!!!!
-- tout centrer dans content
++ tout centrer dans content
 
